--- a/public/templates/email_change.html
+++ b/public/templates/email_change.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<h2>Confirm email change</h2>
+<h2>Confirm email change for DnD Society App</h2>
 
 <p>Follow this link to confirm the update of your email:</p>
 
