--- a/public/templates/invite.html
+++ b/public/templates/invite.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<h2>You have been invited</h2>
+<h2>You have been invited to DnD Soc!</h2>
 
 <p>You have been invited to create a user on {{ .SiteURL }}. Follow this link to accept the invite:</p>
 
