--- a/public/templates/recovery.html
+++ b/public/templates/recovery.html
@@ -3,7 +3,7 @@
 
 <h2>Reset Password</h2>
 
-<p>Follow this link to reset the password for your user:</p>
+<p>Follow this link to reset the password for DnD Society App:</p>
 
 <p><a href="{{ .ConfirmationURL }}">Reset Password</a></p>
 
