refactor: improve the auth pipeline pages, and create confirm routes where the user needs to click a button to continue
completes #41

--- a/public/templates/confirmation.html
+++ b/public/templates/confirmation.html
@@ -5,9 +5,15 @@
 
 <p>Follow this link to confirm email address:</p>
 <p>
+  {{ if .Data.siteUrl }}
   <a
-    href="{{ .Data.siteUrl }}/confirm-email?token_hash={{ .TokenHash }}&type=email&next={{ .RedirectTo }}"
+    href="{{ .Data.siteUrl }}/confirm/email-signup?token_hash={{ .TokenHash }}&type=email&next={{ .RedirectTo }}"
   >Confirm your email</a>
+  {{ else }}
+  <a
+    href="{{ .SiteURL }}/confirm/email-signup?token_hash={{ .TokenHash }}&type=email&next={{ .RedirectTo }}"
+  >Confirm your email</a>
+  {{ end }}
 </p>
 
 </body>
