--- a/public/templates/recovery.html
+++ b/public/templates/recovery.html
@@ -6,9 +6,9 @@
 <p>Follow this link to reset the password for DnD Society App:</p>
 
 {{ if .Data.siteUrl }}
-<p><a href="{{ .Data.siteUrl }}/auth/reset-password?token_hash={{ .TokenHash }}&type=recovery">Reset Password</a></p>
+<p><a href="{{ .Data.siteUrl }}/confirm/reset-password?token_hash={{ .TokenHash }}&type=recovery">Reset Password</a></p>
 {{ else }}
-<p><a href="{{ .SiteURL }}/auth/reset-password?token_hash={{ .TokenHash }}&type=recovery">Reset Password</a></p>
+<p><a href="{{ .SiteURL }}/confirm/reset-password?token_hash={{ .TokenHash }}&type=recovery">Reset Password</a></p>
 {{ end }}
 
 </body>
